--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -14,12 +14,22 @@
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
-	/**/
+	.header-content
+		h1
+			font-size: 50px
+		span
+			font-size: 90px	
 
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
-	/**/
+	.header-content
+		h1
+			font-size: 30px
+		span
+			font-size: 70px
+		input
+			min-width: 90%	
 
 
 /* Custom, iPhone Retina */
